Clean-up contributors and add files field

--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "brunch-buble",
   "version": "4.2.3",
   "description": "Adds support to transform ES6 to ES5 with Bublé to Brunch.",
-  "contributors": [{
-    "name": "Roberto Dip",
-    "email": "dip.jesusr@gmail.com",
-    "url": "http://roperzh.com/"
-  }, {
-    "name": "aMarCruz",
-    "email": "amarcruzbox-git@yahoo.com",
-    "url": "https://github.com/aMarCruz"
-  }],
+  "files": [
+    "*.js"
+  ],
+  "contributors": [
+    {
+      "name": "Roberto Dip",
+      "email": "dip.jesusr@gmail.com",
+      "url": "http://roperzh.com/"
+    },
+    {
+      "name": "aMarCruz",
+      "email": "amarcruzbox-git@yahoo.com",
+      "url": "https://github.com/aMarCruz"
+    }
+  ],
   "homepage": "https://github.com/roperzh/buble-brunch",
   "license": "MIT",
   "repository": {
