--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
     "test": "eslint ."
   },
   "dependencies": {
-    "buble": "^0.14.2"
+    "buble": "^0.15.2",
+    "anymatch": "^1.3.0",
+    "flatten-brunch-map": "^2.8.1"
   },
   "peerDependencies": {
     "brunch": "^2.10.3"
   },
   "devDependencies": {
-    "anymatch": "^1.3.0",
     "eslint": "^3.14.0",
-    "eslint-config-brunch": "brunch/eslint-config-brunch",
-    "flatten-brunch-map": "^2.8.1"
+    "eslint-config-brunch": "brunch/eslint-config-brunch"
   },
   "eslintConfig": {
     "extends": "brunch"
