--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buble-brunch",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "Adds support to transform ES6 to ES5 with Bublé to Brunch.",
   "files": [
     "*.js"
@@ -38,12 +38,9 @@
     "anymatch": "^1.3.0",
     "flatten-brunch-map": "^2.8.1"
   },
-  "peerDependencies": {
-    "brunch": "^2.10.3"
-  },
   "devDependencies": {
     "eslint": "^3.14.0",
-    "eslint-config-brunch": "brunch/eslint-config-brunch"
+    "eslint-config-brunch": "eslint-config-brunch"
   },
   "eslintConfig": {
     "extends": "brunch"
